5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1712_2496.log
== TEST (2019-05-08 14:28:40) 
-- CODE:
num=int(input("numero :")
x= 0
while (num != -1) :
	x= x + num
	num=int(input("numero :")
print(x)
-- ERROR:
File "XXXX", line 2
    x= 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:28:44) 
-- CODE:
num=int(input("numero :")
x= 0
while (num != -1) :
	x= x + num
	num=int(input("numero :")
print(x)
-- EXECUTION TIME:
0.193451
-- ERROR:
  File "/home/codebench/codes/1712/2496/main.py", line 2
    x= 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:28:47) 
-- CODE:
num=int(input("numero :")
x=0
while (num != -1) :
	x= x + num
	num=int(input("numero :")
print(x)
-- ERROR:
File "XXXX", line 2
    x=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:01) 
-- CODE:
num=int(input("numero :")

while (num != -1) :
	x=0
	x= x + num
	num=int(input("numero :")
print(x)
-- ERROR:
File "XXXX", line 3
    while (num != -1) :
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:25) 
-- CODE:
num=int(input("numero :")
x=0
while (num != -1) :
	x= x + num
	num=int(input("numero :")
print(x)
-- ERROR:
File "XXXX", line 2
    x=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:36) 
-- CODE:
num=int(input("numero :"))
x=0
while (num != -1) :
	x= x + num
	num=int(input("numero :")
print(x)
-- ERROR:
File "XXXX", line 6
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:44) 
-- CODE:
num=int(input("numero :"))
x=0
while (num != -1) :
	x= x + num
	num=int(input("numero :"))
print(x)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:29:57) 
-- CODE:
num=int(input("numero :"))
x=0
while (num != -1) :
	x= x + num
	num=int(input("numero :"))
print(x)
-- EXECUTION TIME:
0.16554
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
